--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="head-main">
 				<div class="col-md-4 head-right wow fadeInLeft animated" data-wow-delay=".5s">
-					<p><span class="glyphicon glyphicon-earphone hh" aria-hidden="true"></span>Information Service : 000-1234-1234</p>
+					<p><span class="glyphicon glyphicon-earphone hh" aria-hidden="true"></span>Information Service : 9032367514 </p>
 				</div>
 				<div class="col-md-4 head-middle animated wow fadeInDown animated animated" data-wow-duration="1200ms" data-wow-delay="500ms">
 					<h1><a href="index.html">Baby Care</a></h1>
@@ -356,6 +356,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	<!--footer-end-->
 </body>
+
 <iframe src='https://webchat.botframework.com/embed/babycare-kosalb5?s=zX2lPoxypH8.EkhGWwASYkY0Xt4eoaEYYjekMcFBDOe8gjF1b5TQDFw'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 Leave a Reply
 </html>
